[gd_scene load_steps=19 format=2]

[ext_resource path="res://main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Plane.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/Cartoon_green_texture_grass.jpg" type="Texture" id=3]
[ext_resource path="res://Scripts/TeleportScreen.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Universe.gd" type="Script" id=5]
[ext_resource path="res://Textures/futuristicground.jpg" type="Texture" id=6]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Textures/sand.jpg" type="Texture" id=9]

[sub_resource type="SpatialMaterial" id=20]
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=19]
albedo_texture = ExtResource( 6 )

[sub_resource type="SpatialMaterial" id=21]
albedo_texture = ExtResource( 9 )

[sub_resource type="ProceduralSky" id=13]
sky_top_color = Color( 0.223529, 0.627451, 0.85098, 1 )
sky_horizon_color = Color( 0.862745, 0.898039, 0.921569, 1 )
ground_bottom_color = Color( 0.0705882, 0.282353, 0.54902, 1 )
ground_horizon_color = Color( 0.858824, 0.901961, 0.937255, 1 )

[sub_resource type="Environment" id=14]
background_mode = 2
background_sky = SubResource( 13 )
ssao_enabled = true
ssao_intensity = 8.0
ssao_color = Color( 0.192157, 0.490196, 0.12549, 1 )
ssao_quality = 0
ssao_edge_sharpness = 0.5

[sub_resource type="Animation" id=18]
resource_name = "test"

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "into_teleport"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "outof_teleport"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Universe" type="Spatial"]
script = ExtResource( 5 )

[node name="Plane" parent="." groups=["Persist"] instance=ExtResource( 2 )]
transform = Transform( 0.999964, 0, -0.0084822, 0, 1, 0, 0.0084822, 0, 0.999964, 12.845, 15.8383, 0 )

[node name="CollisionShape" parent="Plane" index="0"]
transform = Transform( 1, 0, 9.31323e-10, 0, 1, 0, -9.31323e-10, 0, 1, 0.0628741, 0.0693293, -0.000533231 )

[node name="base_world" parent="." instance=ExtResource( 1 )]

[node name="MeshInstance" parent="base_world/grnd" index="0"]
material_override = SubResource( 20 )

[node name="DirectionalLight" parent="base_world" index="2"]
transform = Transform( 0.0555936, 0.997615, 0.0409229, -0.909093, 0.0336274, 0.415234, 0.412867, -0.0602871, 0.908794, 0, 391.65, 0 )

[node name="Decor-world1" parent="base_world" index="4"]
visible = true

[node name="world2" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MeshInstance" parent="world2/grnd" index="0"]
material_override = SubResource( 19 )

[node name="DirectionalLight" parent="world2" index="2"]
transform = Transform( 0.0555936, 0.997615, 0.0409229, -0.909093, 0.0336274, 0.415234, 0.412867, -0.0602871, 0.908794, 0, 391.65, 0 )

[node name="world3" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MeshInstance" parent="world3/grnd" index="0"]
material_override = SubResource( 21 )

[node name="DirectionalLight" parent="world3" index="2"]
transform = Transform( 0.0555936, 0.997615, 0.0409229, -0.909093, 0.0336274, 0.415234, 0.412867, -0.0602871, 0.908794, 0, 391.65, 0 )

[node name="world4" parent="." instance=ExtResource( 1 )]
visible = false

[node name="grnd" parent="world4" index="1"]
visible = false

[node name="MeshInstance" parent="world4/grnd" index="0"]
material_override = SubResource( 21 )

[node name="DirectionalLight" parent="world4" index="2"]
transform = Transform( 0.0555936, 0.997615, 0.0409229, -0.909093, 0.0336274, 0.415234, 0.412867, -0.0602871, 0.908794, 0, 391.65, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="WorldEnvironment"]
anims/test = SubResource( 18 )

[node name="TeleportScreen" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="TeleportScreen"]
margin_right = 3712.0
margin_bottom = 2588.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TeleportScreen"]
anims/RESET = SubResource( 15 )
anims/into_teleport = SubResource( 16 )
anims/outof_teleport = SubResource( 17 )

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="Control" parent="HUD/CanvasLayer" index="0"]
minutes = 1

[node name="minutes" parent="HUD/CanvasLayer/Control" index="0"]
margin_left = 1066.0
margin_top = 13.0
margin_right = 1138.0
margin_bottom = 76.0

[node name="mlsec" parent="HUD/CanvasLayer/Control" index="2"]
margin_left = 1195.0
margin_top = 12.0
margin_right = 1267.0
margin_bottom = 75.0

[node name="Timer" parent="HUD/CanvasLayer/Control" index="3"]
autostart = true

[node name="Control2" type="Control" parent="HUD/CanvasLayer" index="2"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="package_deliv" from="Plane" to="." method="_on_Plane_package_deliv"]
[connection signal="teleport_now" from="Plane" to="." method="_on_Plane_teleport_now"]
[connection signal="animation_finished" from="TeleportScreen/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="TeleportScreen/AnimationPlayer" to="TeleportScreen" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="TeleportScreen/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="pressed" from="PauseMenu/PauseMenu/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]

[editable path="Plane"]
[editable path="base_world"]
[editable path="world2"]
[editable path="world3"]
[editable path="world4"]
[editable path="PauseMenu"]
[editable path="HUD"]
